--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <!-- header -->
+    <!-- * header -->
     <header class="header">
       <div class="container flex_container">
         <a href="./index.html" class="Web webstudio">Web<span class="Studio">Studio</span></a>
@@ -64,15 +64,15 @@
       </div>
     </header>
 
-    <!-- main -->
+    <!-- * main -->
     <main>
       <section class="main_bg">
         <div class="container">
           <h1 class="main_text">Эффективные решения для вашего бизнеса</h1>
-          <!-- button -->
+          <!-- * button -->
           <button type="button" class="main-modal-btn" data-modal-open>Заказать услугу</button>
 
-          <!-- ======###### modal js #######======= -->
+          <!-- * ======###### modal js #######======= -->
           <div class="backdrop is-hidden" data-modal>
             <div class="modal">
               <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
@@ -130,7 +130,7 @@
         </div>
       </section>
 
-      <!-- traits section -->
+      <!-- * traits section -->
       <section class="section">
         <div class="container">
           <h2 class="visually-hidden">text</h2>
@@ -185,7 +185,7 @@
         </div>
       </section>
 
-      <!-- what are we doing section -->
+      <!-- * what are we doing section -->
       <section class="wawd_block section">
         <div class="container">
           <h2 class="wawd_tittle">Чем мы занимаемся</h2>
@@ -208,7 +208,7 @@
         </div>
       </section>
 
-      <!-- our team section  -->
+      <!--*our team section  -->
       <section class="our_team_sect section">
         <div class="container">
           <h2 class="our_team_text">Наша команда</h2>
@@ -377,7 +377,7 @@
         </div>
       </section>
 
-      <!-- customers section -->
+      <!--*customers section -->
       <section class="section">
         <div class="container">
           <h2 class="customers-text">Постоянные клиенты</h2>
@@ -429,7 +429,7 @@
       </section>
     </main>
 
-    <!-- footer -->
+    <!--*footer -->
     <footer class="footer">
       <div class="container join-link-container">
         <!-- address container-->
