edit styles as BEM technology

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,30 +22,30 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <!-- header -->
+    <!-- * header -->
     <header class="header">
       <div class="container flex_container">
-        <a href="./index.html" class="Web webstudio">Web<span class="Studio">Studio</span></a>
-        <!-- nav -->
-        <nav class="nav">
-          <ul class="nav_list_block list">
-            <li class="nav_list">
-              <a href="./index.html" class="nav_text">Студия</a>
+        <a href="./index.html" class="Web logo">Web<span class="Studio">Studio</span></a>
+        <!-- * header-nav  -->
+        <nav class="header-nav">
+          <ul class="header-nav__list list">
+            <li class="header-nav__item">
+              <a href="./index.html" class="header-nav__link">Студия</a>
             </li>
-            <li class="nav_list">
-              <a href="./portfolio.html" class="nav_text current">Портфолио</a>
+            <li class="header-nav__item">
+              <a href="./portfolio.html" class="header-nav__link current">Портфолио</a>
               <div class="current_page"></div>
             </li>
-            <li class="nav_list">
-              <a href="#" class="nav_text">Контакты</a>
+            <li class="header-nav__item">
+              <a href="#" class="header-nav__link">Контакты</a>
             </li>
           </ul>
         </nav>
-        <!-- Contacts -->
-        <ul class="contacts_header_list list">
-          <li style="margin-right: 30px">
-            <a href="mailto:info@devstudio.com" class="contacts">
-              <svg class="icon_mail">
+        <!-- header-contacts -->
+        <ul class="header-contacts__list list">
+          <li class="header-contacts__item">
+            <a href="mailto:info@devstudio.com" class="header-contacts__link">
+              <svg class="header-contacts__icon">
                 <use href="./images/symbol-defs.svg#icon-envelope"></use>
               </svg>
               info@devstudio.com
