edit portfolio as BEM

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 
     <!-- ? main -->
     <main>
-      <section class="hero">
+      <section class="main">
         <div class="container">
-          <h1 class="hero_tittle">Эффективные решения для вашего бизнеса</h1>
+          <h1 class="main_tittle">Эффективные решения для вашего бизнеса</h1>
           <!-- * button -->
-          <button type="button" class="hero__button" data-modal-open>Заказать услугу</button>
+          <button type="button" class="main__button" data-modal-open>Заказать услугу</button>
 
           <!-- ? ======###### modal js #######======= -->
           <div class="backdrop is-hidden" data-modal>
