--- a/portfolio.html
+++ b/portfolio.html
@@ -53,8 +53,8 @@
           </li>
 
           <li>
-            <a href="tel:+380961111111" class="contacts">
-              <svg class="icon_phone">
+            <a href="tel:+380961111111" class="header-contacts__link">
+              <svg class="header-contacts__icon">
                 <use href="./images/symbol-defs.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -69,155 +69,159 @@
         <div class="container">
           <h1 class="visually-hidden">text</h1>
           <!-- filter btn sect -->
-          <ul class="filter_button_block">
+          <ul class="filter-list">
             <li>
-              <button type="button" class="btn_filter current_btn">Все</button>
+              <button type="button" class="filter-list__button current_btn">Все</button>
             </li>
             <li>
-              <button type="button" class="btn_filter">Веб-сайты</button>
+              <button type="button" class="filter-list__button">Веб-сайты</button>
             </li>
             <li>
-              <button type="button" class="btn_filter">Приложения</button>
+              <button type="button" class="filter-list__button">Приложения</button>
             </li>
             <li>
-              <button type="button" class="btn_filter">Дизайн</button>
+              <button type="button" class="filter-list__button">Дизайн</button>
             </li>
             <li>
-              <button type="button" class="btn_filter">Маркетинг</button>
+              <button type="button" class="filter-list__button">Маркетинг</button>
             </li>
           </ul>
           <!-- img sect -->
-          <ul class="filter_img_block">
+          <ul class="filter-img">
+            <!-- ! 1st -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img1.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>
+                    <p class="overlay__text">
                       Ресурс предлагает комплексные предложения с разным уровнем функционала и
                       сервисов. Всё это позволит посетителю получить исчерпывающие сведения о
                       компании или частном лице.
                     </p>
                   </div>
                 </div>
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Технокряк</h2>
-                  <p class="filter_img_downer_text">Веб-сайт</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Технокряк</h2>
+                  <p class="filter-img__subtitle">Веб-сайт</p>
                 </div>
               </a>
             </li>
+            <!-- ! 2nd -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img2.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>
+                    <p class="overlay__text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur expedita
                       voluptas maxime accusamus, nam molestiae tempore placeat quia quaerat quidem
                       deserunt? Nam assumenda fuga deleniti quibusdam itaque magni veritatis hic.
                     </p>
                   </div>
                 </div>
-
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Постер New Orlean vs Golden Star</h2>
-                  <p class="filter_img_downer_text">Дизайн</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Постер New Orlean vs Golden Star</h2>
+                  <p class="filter-img__subtitle">Дизайн</p>
                 </div>
               </a>
             </li>
+            <!-- ! 3rd -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img3.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>
+                    <p class="overlay__text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita placeat
                       quasi, ipsa numquam possimus sed blanditiis dignissimos vel nesciunt nemo
                       consequatur quas non fugit facilis!
                     </p>
                   </div>
                 </div>
-
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Ресторан Seafood</h2>
-                  <p class="filter_img_downer_text">Приложение</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Ресторан Seafood</h2>
+                  <p class="filter-img__subtitle">Приложение</p>
                 </div>
               </a>
             </li>
+            <!-- ! 4th -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img4.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, mollitia!</p>
+                    <p class="overlay__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, mollitia!</p>
                   </div>
                 </div>
 
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Проект Prime</h2>
-                  <p class="filter_img_downer_text">Маркетинг</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Проект Prime</h2>
+                  <p class="filter-img__subtitle">Маркетинг</p>
                 </div>
               </a>
             </li>
+            <!-- ! 5th -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img5.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>
+                    <p class="overlay__text">
                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa nisi aperiam
                       iure eius, doloremque dicta voluptatibus aliquid?
                     </p>
                   </div>
                 </div>
-
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Проект Boxes</h2>
-                  <p class="filter_img_downer_text">Приложение</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Проект Boxes</h2>
+                  <p class="filter-img__subtitle">Приложение</p>
                 </div>
               </a>
             </li>
+            <!-- ! 6th -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img6.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>
+                    <p class="overlay__text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam velit quasi
                       iure, nulla facere eos.
                     </p>
                   </div>
                 </div>
-
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Inspiration has no Borders</h2>
-                  <p class="filter_img_downer_text">Веб-сайт</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Inspiration has no Borders</h2>
+                  <p class="filter-img__subtitle">Веб-сайт</p>
                 </div>
               </a>
             </li>
+            <!-- ! 7th -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img7.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>
+                    <p class="overlay__text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quisquam ipsa
                       veritatis dolorum consequatur magni.
                     </p>
                   </div>
                 </div>
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Издание Limited Edition</h2>
-                  <p class="filter_img_downer_text">Дизайн</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Издание Limited Edition</h2>
+                  <p class="filter-img__subtitle">Дизайн</p>
                 </div>
               </a>
             </li>
+            <!-- ! 8th -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img8.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>
+                    <p class="overlay__text">
                       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum laboriosam
                       architecto dolore reiciendis obcaecati officia. Quibusdam molestias
                       necessitatibus deserunt rerum modi? Consequuntur inventore possimus, saepe
@@ -225,19 +229,19 @@
                     </p>
                   </div>
                 </div>
-
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Проект LAB</h2>
-                  <p class="filter_img_downer_text">Маркетинг</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Проект LAB</h2>
+                  <p class="filter-img__subtitle">Маркетинг</p>
                 </div>
               </a>
             </li>
+            <!-- ! 9th -->
             <li>
-              <a href="#" class="filter_link">
-                <div class="filter_overlay_square">
+              <a href="#" class="filter-img__link">
+                <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img9.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p>
+                    <p class="overlay__text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, sint?
                       Excepturi nesciunt facere delectus animi accusamus officiis cum omnis culpa,
                       eum, sapiente ex mollitia harum consequuntur maxime assumenda obcaecati
@@ -245,10 +249,9 @@
                     </p>
                   </div>
                 </div>
-
-                <div class="filter_img_container">
-                  <h2 class="filter_img_text">Growing Business</h2>
-                  <p class="filter_img_downer_text">Приложение</p>
+                <div class="filter-img__descContainer">
+                  <h2 class="filter-img__title">Growing Business</h2>
+                  <p class="filter-img__subtitle">Приложение</p>
                 </div>
               </a>
             </li>
@@ -256,72 +259,93 @@
         </div>
       </section>
     </main>
-    <!-- footer -->
+    <!--*footer -->
     <footer class="footer">
       <div class="container join-link-container">
-        <!-- address container-->
+        <!-- *address container-->
         <div>
           <a href="./index.html" class="footer_web webstudio"
-            >Web<span class="footer_Studio">Studio</span>
+            >Web<span class="footer_studio">Studio</span>
           </a>
-          <!-- ##### address ##### -->
+          <!-- *##### address ##### -->
           <address>
             <ul>
-              <!-- footer map -->
-              <li class="footer_contacts_item">
+              <!-- *footer map -->
+              <li class="footer__contacts">
                 <a
                   href="https://goo.gl/maps/mLrUPEMYMxBehZcJ7"
                   target="_blank"
                   rel="noopener nofollow"
-                  class="footer_map"
+                  class="footer__map"
                   >г. Киев, пр-т Леси Украинки, 26
                 </a>
               </li>
-              <li class="footer_contacts_item">
-                <a href="mailto:info@example.com" class="footer_contacts">info@example.com</a>
+              <li class="footer__contacts">
+                <a href="mailto:info@example.com" class="footer__contacts">info@example.com</a>
               </li>
-              <li class="footer_contacts_item">
-                <a href="tel:+38099111111" class="footer_contacts">+38 099 111 11 11 </a>
+              <li class="footer__contacts">
+                <a href="tel:+38099111111" class="footer__contacts">+38 099 111 11 11 </a>
               </li>
             </ul>
           </address>
         </div>
-        <!-- join container -->
-        <div class="join-footer">
-          <p class="join-text">Присоединяйтесь</p>
-          <ul class="our-team-list">
-            <li class="our-team-svg-item join-footer-item">
-              <a href="https://www.instagram.com" class="our-team-link join-svg">
-                <svg class="our-team-svg footer-svg">
+        <!-- *join container -->
+        <div class="footer-join">
+          <p class="footer-join__text">Присоединяйтесь</p>
+          <ul class="main-team__linkslist">
+            <li class="main-team__icon-item footer-join__item">
+              <a href="https://www.instagram.com" class="main-team__link footer-join__link">
+                <svg class="main-team__icon">
                   <use href="./images/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="our-team-svg-item join-footer-item">
-              <a href="https://twitter.com/?lang=ru" class="our-team-link join-svg">
-                <svg class="our-team-svg footer-svg">
+            <li class="main-team__icon-item footer-join__item">
+              <a href="https://twitter.com/?lang=ru" class="main-team__link footer-join__link">
+                <svg class="main-team__icon">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="our-team-svg-item join-footer-item">
-              <a href="https://uk-ua.facebook.com" class="our-team-link join-svg">
-                <svg class="our-team-svg footer-svg">
+            <li class="main-team__icon-item footer-join__item">
+              <a href="https://uk-ua.facebook.com" class="main-team__link footer-join__link">
+                <svg class="main-team__icon">
                   <use href="./images/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="our-team-svg-item join-footer-item">
+            <li class="main-team__icon-item footer-join__item">
               <a
                 href="https://www.linkedin.com/in/владислав-ульянеев-21a133240/"
-                class="our-team-link join-svg"
+                class="main-team__link footer-join__link"
               >
-                <svg class="our-team-svg footer-svg">
+                <svg class="main-team__icon">
                   <use href="./images/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
+        </div>
+        <!-- *subscription container -->
+        <div class="footer-subscription">
+          <p class="footer-subscription__title">Подпишитесь на рассылку</p>
+          <form>
+            <label class="footer-subscription__label">
+              <input
+                type="email"
+                name="subscr-email"
+                placeholder="E-mail"
+                required
+                class="footer-subscription__input"
+              />
+              <button class="footer-subscription__button">
+                Подписаться
+                <svg class="footer-subscription__icon">
+                  <use href="./images/icon.svg#icon-send"></use>
+                </svg>
+              </button>
+            </label>
+          </form>
         </div>
       </div>
     </footer>
