--- a/portfolio.html
+++ b/portfolio.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
-    <!-- ##### normalize ##### -->
+    <title>WebStudio</title>
+    <!-- !Normalize -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
@@ -19,7 +19,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./css/main.min.css" />
+    <!-- <link rel="stylesheet" href="./css/main.min.css" /> -->
   </head>
   <body>
     <!-- * header -->
@@ -151,7 +152,9 @@
                 <div class="filter-img__overlaySquare">
                   <img src="./images/portfolio/img4.jpg" alt="portfolio_pic" />
                   <div class="overlay">
-                    <p class="overlay__text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, mollitia!</p>
+                    <p class="overlay__text">
+                      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio, mollitia!
+                    </p>
                   </div>
                 </div>
 
