--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <!-- * header -->
+    <!-- ! header -->
     <header class="header">
       <div class="container flex_container">
         <a href="./index.html" class="Web logo">Web<span class="Studio">Studio</span></a>
@@ -64,7 +64,7 @@
       </div>
     </header>
 
-    <!-- ? main -->
+    <!-- ! main -->
     <main>
       <section class="main">
         <div class="container">
@@ -450,7 +450,7 @@
       </section>
     </main>
 
-    <!--*footer -->
+    <!-- ! footer -->
     <footer class="footer">
       <div class="container join-link-container">
         <!-- *address container-->
@@ -541,7 +541,7 @@
       </div>
     </footer>
 
-    <!-- ##### js script ##### -->
+    <!-- ! ##### js script ##### ! -->
     <script src="./js/modal.js"></script>
   </body>
 </html>
