--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
     <!-- <link rel="stylesheet" href="./css/main.min.css" /> -->
   </head>
   <body>
-    <!-- * header -->
+    <!-- ! header -->
     <header class="header">
       <div class="container flex_container">
         <a href="./index.html" class="Web logo">Web<span class="Studio">Studio</span></a>
@@ -64,12 +64,12 @@
         </ul>
       </div>
     </header>
-    <!-- main -->
+    <!-- ! main -->
     <main>
       <section class="section">
         <div class="container">
           <h1 class="visually-hidden">text</h1>
-          <!-- filter btn sect -->
+          <!-- * filter btn sect -->
           <ul class="filter-list">
             <li>
               <button type="button" class="filter-list__button current_btn">Все</button>
@@ -87,7 +87,7 @@
               <button type="button" class="filter-list__button">Маркетинг</button>
             </li>
           </ul>
-          <!-- img sect -->
+          <!-- * img sect -->
           <ul class="filter-img">
             <!-- ! 1st -->
             <li>
@@ -262,7 +262,7 @@
         </div>
       </section>
     </main>
-    <!--*footer -->
+    <!-- ! footer -->
     <footer class="footer">
       <div class="container join-link-container">
         <!-- *address container-->
